# auto-index-creation

./: CMakeLists.txt  DSStack.h  DSString.cpp  DSVector.h  Indexer.cpp  Indexer.h  book2.txt  catch.cpp  input01.txt  input02.txt  keywords2.txt  main.cpp  pages.cpp  pages.h
